--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URL="mongodb://localhost:27017"
 DB_NAME="waste_collection_db"
-CORS_ORIGINS="*"
+CORS_ORIGINS="https://econgkut.vercel.app"
 STRIPE_API_KEY=sk_test_emergent
