--- a/.env
+++ b/.env
@@ -1,31 +1,24 @@
-<<<<<<< HEAD
 # MongoDB (gunakan MongoDB Atlas untuk production)
 MONGO_URL=mongodb+srv://admin:AxA88xnr7F7inBR9@cluster0.jdm67ud.mongodb.net/econgkut_db?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=econgkut_db
 
-# CORS - sesuaikan dengan frontend domain Anda
+# CORS
 CORS_ORIGINS=https://econgkut.vercel.app
 
-# Stripe
-STRIPE_API_KEY=sk_live_your_live_key
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+# Stripe (ganti dengan live key untuk production)
+STRIPE_API_KEY=sk_test_emergent
+STRIPE_WEBHOOK_SECRET=
 
-# Google OAuth - UPDATE dengan production URL
+# Google OAuth
 GOOGLE_CLIENT_ID=1098906654534-lm7or44e6uqevaosqn70dp57h09p45kk.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=https://econgkut.vercel.app/auth/callback
+GOOGLE_REDIRECT_URI=https://backend-econgkut.vercel.app/api/auth/google/callback
 
-# Frontend URL - UPDATE dengan production URL
+# Frontend URL
 FRONTEND_URL=https://econgkut.vercel.app
 
-# JWT Secret - GENERATE RANDOM STRING untuk production
+# JWT Secret
 JWT_SECRET_KEY=RWauZGLF9R9XTqVS73MVbqUcFQD7bMzMnh4aLdgHYZs
 
 # Environment
 ENVIRONMENT=production
-=======
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="waste_collection_db"
-CORS_ORIGINS="https://econgkut.vercel.app"
-STRIPE_API_KEY=sk_test_emergent
->>>>>>> f51767b687fc3588f887acf37417a8a6bd94f045
