--- a/.env
+++ b/.env
@@ -1,24 +1,19 @@
-# MongoDB (gunakan MongoDB Atlas untuk production)
+# MongoDB
 MONGO_URL=mongodb+srv://admin:AxA88xnr7F7inBR9@cluster0.jdm67ud.mongodb.net/econgkut_db?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=econgkut_db
 
-# CORS
-CORS_ORIGINS=https://econgkut.vercel.app
+# CORS - Allow both production and localhost for development
+CORS_ORIGINS=https://econgkut.vercel.app,http://localhost:3000,http://localhost:5173
 
-# Stripe (ganti dengan live key untuk production)
+# Stripe
 STRIPE_API_KEY=sk_test_emergent
 STRIPE_WEBHOOK_SECRET=
-
-# Google OAuth
-GOOGLE_CLIENT_ID=1098906654534-lm7or44e6uqevaosqn70dp57h09p45kk.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=https://backend-econgkut.vercel.app/api/auth/google/callback
 
 # Frontend URL
 FRONTEND_URL=https://econgkut.vercel.app
 
-# JWT Secret
-JWT_SECRET_KEY=RWauZGLF9R9XTqVS73MVbqUcFQD7bMzMnh4aLdgHYZs
-
 # Environment
 ENVIRONMENT=production
+
+# Note: Google OAuth variables are not needed since we're using Emergent OAuth
+# The Emergent OAuth service handles Google authentication for us
